kustomize/argo-events/base/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: github-eventsource-webhook
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`github-events.infra.rwx.im`)
    services:
    - name: github-eventsource-svc
      port: 12000
  tls:
    secretName: infra-rwx-im-tls
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: eventsource-webhook
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`events.infra.rwx.im`)
    services:
    - name: deployment-eventsource-svc
      port: 12000
  tls:
    secretName: infra-rwx-im-tls
